--- a/fibonacci.cabal
+++ b/fibonacci.cabal
@@ -2,6 +2,7 @@ Name:          fibonacci
 Version:       0.1.0.0
 Cabal-Version: >= 1.6
 Synopsis:      Fast computation of Fibonacci numbers.
+Description:   <http://en.wikipedia.org/wiki/Fibonacci_number#Matrix_form>
 Category:      Algorithms, Numerical
 License:       BSD3
 License-File:  LICENSE
