--- a/fibonacci.cabal
+++ b/fibonacci.cabal
@@ -2,7 +2,16 @@ Name:          fibonacci
 Version:       0.2.0.0
 Cabal-Version: >= 1.6
 Synopsis:      Fast computation of Fibonacci numbers.
-Description:   <http://en.wikipedia.org/wiki/Fibonacci_number#Matrix_form>
+Description:   
+
+   Fast computation of Fibonacci numbers. Use version @0.1.*@ if you
+   prefer the Fibonacci sequence to start with one instead of
+   zero. Version @0.2.*@ adds correct handling of negative arguments
+   and changes the implementation to satisfy @fib 0 = 0@.
+   
+   See <http://en.wikipedia.org/wiki/Fibonacci_number#Matrix_form> for
+   a description of the employed method.
+
 Category:      Algorithms, Numerical
 License:       BSD3
 License-File:  LICENSE
